<resources>
    <!-- TODO: Move hardcoded strings throughout the app to here -->
    <string name="app_name">Bytesize History</string>
    <string name="date_settings">Change date</string>
    <string name="theme_settings">Change theme</string>
    <string name="theme_settings_light">Change to dark theme</string>
    <string name="theme_settings_dark">Change to light theme</string>
    <string name="notification_settings">Notification settings</string>
    <string name="calendar_view">Calendar</string>
    <string name="filter_view">Filter</string>
    <string name="default_date">Today</string>
    <string name="default_image">History image</string>
    <string name="default_year">1918</string>
    <string name="default_desc">The end of WW1. The end of WW1.</string>
    <string name="events_text">Events</string>
    <string name="births_text">Births</string>
    <string name="deaths_text">Deaths</string>
    <string name="observances_text">Holidays</string>

    <!-- Filter dropdown -->
    <string name="filters_title">Preferences</string>
    <string name="order_header">Order</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="type_header">Types</string>
    <string name="type_events">Events</string>
    <string name="type_births">Births</string>
    <string name="type_deaths">Deaths</string>
    <string name="type_observances">Holidays/observances</string>
    <string name="era_header">Time Periods</string>
    <string name="era_ancient">Ancient (before 500 AD)</string>
    <string name="era_medieval">Medieval (500-1500 AD)</string>
    <string name="era_modern">Early Modern (1500-1800 AD)</string>
    <string name="era_1800s">1800s</string>
    <string name="era_1900s">1900s</string>
    <string name="era_2000s">2000s</string>

    <!-- Preferences -->
    <string name="preferences_key">preferences</string>
    <string name="current_type_pref_key">current_type</string>
    <string name="theme_pref_key">theme</string>
    <string name="notification_enabled_pref_key">send_notifications</string>
    <string name="notification_time_pref_key">notification_time</string>
    <string name="has_filter_prefs_key">has_filter_preferences</string>

    <!-- User dialog messages -->
    <string name="fetch_error">Unable to fetch data.\nPlease make sure you have an internet connection.</string>
    <string name="retry_btn">Retry</string>
    <string name="filter_error">No %1$s found matching those filters.</string>
    <string name="type_error">There\'s absolutely nothing here.</string>

    <!-- Notification settings -->
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notification_time_default">10:00</string>
    <string name="notification_summary_enabled">A history fact will be sent to you daily at %1$s.</string>
    <string name="notification_summary_disabled">Daily history notification is disabled.</string>
    <string name="notification_change_time">Change time</string>
    <string name="notification_disable">Disable</string>
    <string name="notification_enable">Enable</string>

    <!-- Notifications -->
    <string name="notification_title">%1$s: On this day in %2$s...</string>
</resources>
