<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

<!-- Need 56dp paddingBottom otherwise gets cut off when height is too small -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground"
        android:paddingBottom="56dp">

    <!-- Order toggle -->
    <TextView
            android:text="@string/order_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"/>
    <Switch
            android:text="@string/order_descending"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/notification_switch"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textOff="@string/order_descending"
            android:textOn="@string/order_ascending"
            android:layout_marginTop="8dp"/>

    <!-- Type toggles -->
    <TextView
            android:text="@string/type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>
    <Switch
            android:text="@string/type_events"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchEvents"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/type_births"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchBirths"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/type_deaths"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchDeaths"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/type_observances"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchObservances"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

    <!-- Era toggles -->
    <TextView
            android:text="@string/era_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"/>
    <Switch
            android:text="@string/era_ancient"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchAncient"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/era_medieval"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/switchMedieval"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/era_modern"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:id="@+id/switchEarlyModern"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/era_1800s"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:id="@+id/switch1800s"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/era_1900s"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:id="@+id/switch1900s"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Switch
            android:text="@string/era_2000s"
            android:textColor="?attr/colorText"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:id="@+id/switch2000s"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
</LinearLayout>
</ScrollView>