<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?attr/colorPrimaryLight">

    <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/default_date"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="?attr/colorTextDark"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/filter"
            android:id="@+id/dropdownFilter"
            android:contentDescription="@string/filter_view"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/calendar"
            android:id="@+id/calendarView"
            android:contentDescription="@string/calendar_view"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/dropdownFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>